<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updateActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.update.UpdateActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/new_word_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:id="@+id/new_word_title"
                    style="@style/eloquence_font_style_medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="22dp"
                    android:layout_weight="1"
                    android:text="@string/new_word"
                    android:textAlignment="center" />

            </LinearLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
        android:id="@+id/word_name_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        app:strokeWidth="1dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/word_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@null"
            android:fontFamily="@font/breeserif_regular"
            android:hint="@string/word"
            android:textAppearance="?attr/textAppearanceBody1"
            />

    </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/meaning_edit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_word_app_bar_layout"
            app:strokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meaning_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@null"
                android:fontFamily="@font/breeserif_regular"
                android:hint="@string/meaning"
                android:textAppearance="?attr/textAppearanceBody1"
                />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/save"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
